# CoLingo

./: .gitignore  LICENSE  README.md  cfg2swp.py  config2sweep.py  exp.py  main.py  memo.ipynb  pyproject.toml  requirements.txt  sweep.py  test.py  train.py  train_all.py  train_sweep.py
agents/: sample.pth
benchmark/: lansim.ipynb  topsim.ipynb
colingo/: __init__.py  analysis.py  baseline.py  core.py  logger.py  loggers.py  loss.py  tasks.py  utils.py
colingo/core/: __init__.py  abstract.py  evaluator.py  runner.py  trainer.py
colingo/game/: __init__.py  inferring.py  reconstruction.py  reconstruction_broadcast.py  reconstruction_network.py  signaling.py
colingo/module/: __init__.py  cont_mlp.py  disc_seq_mlp.py  disc_seq_rnn.py  mlp.py  reinforce_loss.py  rnn.py  transformer.py
colingo/zoo/: __init__.py  mlp_rnn_signaling.py  train.py
colingo_old/: analysis.py  logger.py  utils.py
colingo_old/module/: __init__.py  mlp.py  rnn.py  transformer.py
config/: echoing.toml  inferring.toml  multilogue.toml  sample.toml  sample.yaml  signaling.toml  single1.toml  single2.toml
config_sweep/: echoing_search.toml  length_penalty_search.toml  loss_scaling_search.toml  monologue_hyperparam_search.toml  num_agents_search.toml  receiver_parrot_length_search.toml  receiver_parrot_search.toml  sender_output_search.toml  single1.toml
doc/: class.drawio  designdoc.md  sequence.drawio
src/: agent.py  baseline.py  callback.py  dataloader.py  dataset.py  evaluator.py  game.py  logger.py  loss.py  memo.ipynb  model.py  network.py  task.py  trainer.py  util.py
(+299 files in other folders)
