[tool.poetry]
name = "colingo"
version = "0.1.0"
description = ""
authors = ["gizmrkv <gizmrkv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.14.0"
torch = "^2.0.0"
toml = "^0.10.2"
numpy = "^1.24.2"
ipykernel = "^6.22.0"
PyYAML = "^6.0"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
