[tool.poetry]
name = "colingo"
version = "0.1.0"
description = ""
authors = ["gizmrkv <gizmrkv@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.0.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
editdistance = "^0.6.2"
numba = "^0.57.0"
ipykernel = "^6.22.0"
PyYAML = "^6.0"
toml = "^0.10.2"
gym = "^0.26.2"
torchtyping = "^0.1.4"
tqdm = "^4.65.0"
wandb = "^0.14.0"


[tool.poetry.dev-dependencies]
matplotlib = "^3.7.1"
torchvision = "^0.15.2"
torchviz = "^0.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
